--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.javaee-web-api-8.0.jar=C:\\Program Files (x86)\\NetBeans-12.0\\netbeans\\enterprise\\modules\\ext\\javaee-web-api-8.0.jar
 file.reference.mysql-connector-java-8.0.28.jar=web\\WEB-INF\\lib\\mysql-connector-java-8.0.28.jar
 includes=**
 j2ee.compile.on.save=true
@@ -41,8 +40,7 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.28.jar}:\
-    ${file.reference.javaee-web-api-8.0.jar}
+    ${file.reference.mysql-connector-java-8.0.28.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
